# tabsplid

./: .editorconfig  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
.github/: release.yml  renovate.json
.github/workflows/: build.yml  docker-publish.yml  release.yml
backend/: .env  .gitignore  entrypoint  pyproject.toml
backend/app/: database.py  helper.py  limiter.py  main.py  middlewares.py  models.py  routes.py
backend/app/routers/: expenses.py  members.py  projects.py
backend/migrations/: env.py
backend/migrations/versions/: 0000_7fc0f114d626_initial_migration.py  0001_696a16b17fb9_add_order_column.py
frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/config/nginx/locations.d/: 10-root.conf
frontend/public/: site.webmanifest
frontend/public/locales/de/: common.json  home.json  project.json
frontend/public/locales/en/: common.json  home.json  project.json
frontend/public/locales/es/: common.json  home.json  project.json
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx  types.ts  utils.ts  vite-env.d.ts
frontend/src/api/: index.ts
frontend/src/components/: ConfirmDeleteModal.tsx  ErrorMessage.tsx  ExpenseItem.tsx  Footer.tsx  Header.tsx  LanguageDropdown.tsx  LoadingSpinner.tsx  MemberItem.tsx  MemberList.tsx  PaymentList.tsx  UnsavedChangesBanner.tsx
frontend/src/hooks/: useMemberActions.ts  useProject.ts  useProjectState.ts
frontend/src/pages/: HomePage.tsx  ProjectPage.tsx
frontend/src/utils/: calculatePayments.ts
