[tool.poetry]
name = "tabsplid-api"
version = "0.1.0"
description = ""
authors = ["Robin Moser <mail@robinmoser.de>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
pydantic = "^2.10.5"
sqlmodel = "^0.0.24"
pymysql = "^1.1.1"
uuid6 = "^2025.0.0"
bcrypt = "^4.2.1"
alembic = "^1.14.1"
slowapi = "^0.1.9"

[tool.poetry.scripts]
start = "uvicorn app.main:app --reload"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
